--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel='stylesheet' type='text/css' href='index.css'>
 </head>
 <body>
-    
+    <div class = "top-container">
+        <a href="https://www.tajhotels.com/en-in/taj/taj-mahal-palace-mumbai/" target="_blank">
+          <div style="display: flex;">
+            <img src = "Images/tlogo.avif"
+            style = "height: 45px;width: 45px;border-radius: 23px;margin-top:12px;margin-right: 20px;margin-left: 20px">
+            <h1 class = "main-title">
+              Hotel Taj
+            </h1>
+          </div>
+        </a>
+        <div style="display: flex;">
+          <a href = "#home" class="title-links">Home</a>
+          <a href = "#booking" class = "title-links">Booking</a>
+          <a href = "#Payment" class = "title-links">Payment</a>
+          <a href = "#contact-us" class = "title-links">Contact Us</a>
+        </div>
+      </div>
 </body>
 </html>
