--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel='stylesheet' type='text/css' href='index.css'>
 </head>
 <body>
+
+    <!-- Header Component -->
     <div class = "top-container">
         <a href="https://www.tajhotels.com/en-in/taj/taj-mahal-palace-mumbai/" target="_blank">
           <div style="display: flex;">
             <img src = "Images/tlogo.avif"
-            style = "height: 45px;width: 45px;border-radius: 23px;margin-top:12px;margin-right: 20px;margin-left: 20px">
+            style = "height: 45px;width: 45px;border-radius: 23px;margin-top:8px;margin-right: 20px;margin-left: 20px">
             <h1 class = "main-title">
               Hotel Taj
             </h1>
@@ -24,5 +26,22 @@
           <a href = "#contact-us" class = "title-links">Contact Us</a>
         </div>
       </div>
+
+      <!-- Main Body inside the image -->
+      <div class="home-background" id="home">
+        <h1 class = "home-title">Welcome to Taj</h1>
+        <p class = "home-description">
+          Let Your Journeys Take You To Our <br>Hotels & Resorts.
+        </p>
+        <a href = "#booking">
+          <button class = "button">Booking</button>
+        </a>
+        <a href="https://www.tajhotels.com/en-in/taj/taj-mahal-palace-mumbai/" target="_blank">
+          <button class = "button">Know More</button>
+        </a>
+      </div>
+
+
+
 </body>
 </html>
