Types of Bookings

--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
       </div>
 
 
+      <div id = "booking">
+        <h1 class = "home-heading">
+          Booking:
+        </h1>
+        <p class = "home-para">   
+            Experience unparalleled luxury at Taj Hotel in Mumbai, where timeless elegance meets modern comfort. Indulge in opulent accommodations, exquisite dining, and world-class amenities, all while enjoying the strategic location in the heart of the bustling city. Book your stay for a truly unforgettable experience.
+        </p>
+        <span class = "home-para" style= "color:black; margin-right: 8px;">
+          Select The Type of Room:
+        </span>
+  
+        <a href="#single-ac" class = "title-links">Single-A/C</a>
+        <a href="#single-non-ac" class = "title-links">Single-Non-A/C</a>
+        <a href="#double-ac" class = "title-links">Double-A/C</a>
+        <a href="#double-non-ac" class = "title-links">Double-Non-A/C</a>
+      </div>  
 
 </body>
 </html>
