--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         <a href="#double-ac" class = "title-links">Double-A/C</a>
         <a href="#double-non-ac" class = "title-links">Double-Non-A/C</a>
 
+
+        <!-- Single A/C -->
         <h1 class = "rooms-title" id = "single-ac">
             Single A/C : 
           </h1>
@@ -105,6 +107,54 @@
             </p>
             </div>
           </div>
+
+          <!-- Single Non A/C -->
+          <h1 class = "rooms-title" id = "single-non-ac">
+            Single Non A/C : 
+          </h1>
+          <div style="display: flex;">
+            <div style="max-width: 40%;">
+              <p class = "home-para">
+                Secure a tranquil stay in a single non-AC room at Hotel Taj, offering simplicity and comfort. Embrace a serene atmosphere and enjoy a budget-friendly accommodation option. Your satisfaction is our commitment to providing a pleasant and cozy experience.
+              </p>
+              <a href="#Payment">
+               <button class = "booking-button">
+                Book Now
+               </button>
+              </a>
+            </div>
+            <div class = "card">
+              <img src = "Images/singleAc1.avif"
+               class = "card-image">
+               <p class="card-price">
+                <b style = "color: black;margin-right:8px;">
+                  &#x20B9 2,550
+                </b>
+                <span style="text-decoration:line-through;font-size: 16px;">
+                  &#x20B9 8,500
+                </span>
+                <span style="color:green;font-weight: bold;font-size: 18px;">
+                  &nbsp 70% Off
+                </span>
+            </p>
+            </div>
+            <div class = "card">
+              <img src = "Images/singleAc2.jpg"
+               class = "card-image">
+               <p class="card-price">
+                <b style = "color: black;margin-right:8px;">
+                  &#x20B9 3,200
+                </b>
+                <span style="text-decoration:line-through;font-size: 16px;">
+                  &#x20B9 8,000
+                </span>
+                <span style="color:green;font-weight: bold;font-size: 18px;">
+                  &nbsp 60% Off
+                </span>
+            </p>
+            </div>
+          </div>
+    
       </div>  
 
       
