--- a/index.html
+++ b/index.html
@@ -202,8 +202,51 @@
             </div>
           </div>
 
-          
-   
+          <h1 class = "rooms-title" id = "double-non-ac">
+            Double Non A/C : 
+          </h1>
+          <div style="display: flex;">
+            <div style="max-width: 40%;">
+              <p class = "home-para ">
+                Book a comfortable double non-AC room at Hotel Taj for a cozy and cost-effective stay. Embrace simplicity without compromising on comfort, and enjoy a relaxed atmosphere during your visit. Experience the perfect balance of affordability and convenience with our double non-AC room option.
+               </p>
+               <a href="#Payment">
+                 <button class = "booking-button">
+                  Book Now
+                 </button>
+                </a>
+            </div>
+            <div class = "card">
+              <img src = "Images/doublenonac3.jpg"
+               class = "card-image">
+               <p class="card-price">
+                <b style = "color: black;margin-right:8px;">
+                  &#x20B9 9,600
+                </b>
+                <span style="text-decoration:line-through;font-size: 16px;">
+                  &#x20B9 16,000
+                </span>
+                <span style="color:green;font-weight: bold;font-size: 18px;">
+                  &nbsp 40% Off
+                </span>
+            </p>
+            </div>
+            <div class = "card">
+              <img src = "Images/DoubleNonAc2.jpg"
+               class = "card-image">
+               <p class="card-price">
+                <b style = "color: black;margin-right:8px;">
+                  &#x20B9 10,500
+                </b>
+                <span style="text-decoration:line-through;font-size: 16px;">
+                  &#x20B9 15,000
+                </span>
+                <span style="color:green;font-weight: bold;font-size: 18px;">
+                  &nbsp 30% Off
+                </span>
+            </p>
+            </div>
+          </div>
       </div>  
 
       
