--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </p>
             </div>
             <div class = "card">
-              <img src = "Images/singleAc2.jpg"
+              <img src = "Images/singleAc3.jpg"
                class = "card-image">
                <p class="card-price">
                 <b style = "color: black;margin-right:8px;">
@@ -249,6 +249,51 @@
           </div>
       </div>  
 
+      <!-- Bottom Section -->
+      <form id="Payment">
+        <fieldset class="form-details">
+          <legend>Details</legend>
+          <div>
+            <label for="name">Name:</label>
+            <input id="name" name="name" type="text" class = "input-box" placeholder="Enter Username">
+          </div>
+          <div style="margin-top: 7px;">
+            <label for = "select-items">Select The Room:</label>
+            <select class="select-items" id = "select-items">
+              <option>Single A/C</option>
+              <option>Single Non A/C</option>
+              <option>Double A/C</option>
+              <option>Double Non A/C</option>
+            </select>
+          </div>
+          <div style="margin-top: 7px;">
+  
+            <label for="persons">No:of Persons:</label>
+            <input for="persons" type="text" class = "input-box" name="no-of-persons" placeholder="Enter No of Persons">
+          </div>
+          <div style="margin-top: 7px;">
+            <label for = "pno">Phone Number: </label>
+            <input type = "number" class= "input-box" id = "pno" placeholder="Enter the Phone Number">
+          </div>
+          <div style="margin-top: 7px; text-align: center;">
+            <button class = "booking-button">Pay Now!</button>
+          </div>
+        </fieldset>
+      </form>
+      <h1 style = "text-align: center;text-decoration: none;" class = "home-heading">Visit Us Again &#128151</h1>
+      <div class="bottom" id="contact-us">
+        <div class = "icons-container">
+          <h1 class = "bottom-title">Contact-Us:</h1>
+          <p >&#x260E; &nbsp 022-6665-3366</p>
+          <p>&#x2709; &nbsp hoteltaj@gmail.com</p>
+          <p>&copy &nbsp hotel taj 2024</p>
+        </div>
+        <div>
+          <img src = "https://res.cloudinary.com/dgrrf09e7/image/upload/v1706451052/dl.beatsnoop.com-final-gJHrkmiEe9_pqxdwz.jpg" class = "bottom-image"
+          >
+        </div>
+        
+      </div>
       
 </body>
 </html>
