--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <label for = "pno">Phone Number: </label>
             <input type = "number" class= "input-box" id = "pno" placeholder="Enter the Phone Number">
           </div>
-          <div style="margin-top: 7px; text-align: center;">
+          <div style="margin-top: 7px; display: flex; justify-content:center;">
             <button class = "booking-button">Pay Now!</button>
           </div>
         </fieldset>
